overflow issues with longer note sections

--- a/frontend/src/styles/components/utility-panel/_notes.scss
+++ b/frontend/src/styles/components/utility-panel/_notes.scss
@@ -1,4 +1,5 @@
 .project-notes-container {
+  overflow: auto;
   details {
     @include bg(var(--primary-bg));
     @include radius(5px);
